--- a/laku/lakupr.html
+++ b/laku/lakupr.html
@@ -1,168 +1,174 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-<meta charset="UTF-8" />
+<meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Produk Laku di Live MadGazan</title>
 <style>
-  body { font-family: Arial, sans-serif; margin: 15px; max-width: 900px; margin-inline:auto; background-color:#fffef9; }
-  h1,h2,h3 { color:#b36b00; text-align:center; }
-  textarea, select { width:100%; box-sizing:border-box; font-size:1rem; padding:8px; border-radius:6px; border:1px solid #ccc; resize:vertical; }
-  textarea { height:150px; }
-  #output a { display:block; margin-bottom:6px; color:#0066cc; text-decoration:none; }
-  .pagination { margin-top:15px; text-align:center; display:flex; flex-wrap:wrap; gap:6px; justify-content:center; }
-  .page-btn { padding:8px 12px; border:1px solid #ccc; border-radius:6px; cursor:pointer; }
-  .active { background:#ffd42a; color:#b36b00; font-weight:bold; border-color:#b36b00; }
+  body {font-family: Arial, sans-serif; margin: 20px; max-width: 800px; margin-inline:auto;}
+  h2 {text-align: center;}
+  textarea {width: 100%; height: 120px; margin-bottom: 10px;}
+  button, select {margin: 3px; padding: 5px 10px;}
+  .pagination button {margin: 2px;}
+  .link-item {padding: 3px 0; border-bottom: 1px solid #eee;}
 </style>
 </head>
 <body>
 
-<h1>Produk Laku di Live MadGazan</h1>
+<h2>Produk Laku di Live MadGazan</h2>
 
-<textarea id="inputLinks" placeholder="Masukkan ribuan link Shopee..."></textarea>
-
-<div>
-  <button id="hapusDuplikatBtn">Hapus Duplikat</button>
-  <button id="clearInputLinksBtn">Clear</button>
-</div>
-
-<h3>Pilih File</h3>
+<!-- Dropdown -->
+<label for="fileDropdown">Pilih File TXT:</label>
 <select id="fileDropdown">
-  <option value="">-- Pilih File TXT --</option>
-  <option value="jalb.txt">jalb.txt</option>
-  <option value="rano.txt">rano.txt</option>
-  <option value="indah.txt">indah.txt</option>
+  <option value="">-- Pilih File --</option>
   <option value="rini.txt">rini.txt</option>
-  <option value="nurbad.txt">nurbad.txt</option>
+  <option value="jalb.txt">jalb.txt</option>
+  <option value="mad.txt">mad.txt</option>
 </select>
 
+<!-- Tombol aksi -->
+<div class="actions">
+  <button id="ambilFileBtn">Ambil File</button>
+  <button id="hapusDuplikatBtn">Hapus Duplikat</button>
+  <button id="copyInputBtn">Salin Input</button>
+  <button id="clearInputBtn">Hapus Input</button>
+</div>
+
+<!-- Textarea -->
+<textarea id="inputLinks" placeholder="Masukkan atau hasil ambil dari file TXT..."></textarea>
+
+<!-- Statistik -->
 <div id="stats"></div>
+
+<!-- Output -->
 <div id="output"></div>
-<div id="pagination"></div>
+
+<!-- Pagination -->
+<div id="pagination" class="pagination"></div>
 
 <script>
 const MAX_PER_PAGE = 100;
 let allPages = [];
 let currentPage = 1;
-let currentFile = '';
 
-const inputLinksEl = document.getElementById('inputLinks');
-const dropdownEl = document.getElementById('fileDropdown');
-const outputEl = document.getElementById('output');
-const paginationEl = document.getElementById('pagination');
-const statsEl = document.getElementById('stats');
+const dropdown = document.getElementById('fileDropdown');
+const inputLinks = document.getElementById('inputLinks');
+const output = document.getElementById('output');
+const stats = document.getElementById('stats');
+const pagination = document.getElementById('pagination');
 
-/* === Restore data saat halaman dibuka === */
+// Load awal
 window.addEventListener('load', () => {
   const savedFile = localStorage.getItem('selectedFile');
-  if (savedFile) {
-    currentFile = savedFile;
-    dropdownEl.value = currentFile;
-    restoreDataForFile(currentFile);
+  if (savedFile) dropdown.value = savedFile;
+  restoreData();
+});
+
+// Ubah file dropdown
+dropdown.addEventListener('change', () => {
+  localStorage.setItem('selectedFile', dropdown.value);
+  restoreData();
+});
+
+// Tombol ambil file
+document.getElementById('ambilFileBtn').addEventListener('click', async () => {
+  const file = dropdown.value;
+  if (!file) return alert('Pilih file dulu!');
+  try {
+    const res = await fetch(file + '?t=' + Date.now(), {cache: 'no-store'});
+    const text = await res.text();
+    inputLinks.value = text.trim();
+    localStorage.setItem('inputList_' + file, inputLinks.value);
+    processLinks();
+    alert('Berhasil mengambil: ' + file);
+  } catch (err) {
+    alert('Gagal ambil file: ' + err.message);
   }
 });
 
-/* === Ganti file dropdown === */
-dropdownEl.addEventListener('change', () => {
-  saveDataForFile(currentFile); // simpan dulu file lama
-  currentFile = dropdownEl.value;
-  localStorage.setItem('selectedFile', currentFile);
-  restoreDataForFile(currentFile);
-});
-
-/* === Simpan data input setiap ketik === */
-inputLinksEl.addEventListener('input', () => {
-  if (!currentFile) return;
-  localStorage.setItem('inputList_' + currentFile, inputLinksEl.value);
-  processLinks();
-});
-
-/* === Tombol hapus duplikat === */
+// Tombol hapus duplikat
 document.getElementById('hapusDuplikatBtn').addEventListener('click', () => {
-  const lines = inputLinksEl.value.split('\n').map(x=>x.trim()).filter(Boolean);
+  const lines = inputLinks.value.split('\n').map(l => l.trim()).filter(Boolean);
   const unique = [...new Set(lines)];
-  inputLinksEl.value = unique.join('\n');
-  if (currentFile)
-    localStorage.setItem('inputList_' + currentFile, inputLinksEl.value);
+  inputLinks.value = unique.join('\n');
+  const file = dropdown.value;
+  if (file) localStorage.setItem('inputList_' + file, inputLinks.value);
+  processLinks();
+  alert('Duplikat dihapus!');
+});
+
+// Tombol salin input
+document.getElementById('copyInputBtn').addEventListener('click', () => {
+  navigator.clipboard.writeText(inputLinks.value).then(() => alert('Disalin ke clipboard!'));
+});
+
+// Tombol hapus input
+document.getElementById('clearInputBtn').addEventListener('click', () => {
+  inputLinks.value = '';
+  const file = dropdown.value;
+  if (file) localStorage.removeItem('inputList_' + file);
   processLinks();
 });
 
-/* === Tombol clear === */
-document.getElementById('clearInputLinksBtn').addEventListener('click', () => {
-  inputLinksEl.value = '';
-  if (currentFile)
-    localStorage.removeItem('inputList_' + currentFile);
+// Input manual
+inputLinks.addEventListener('input', () => {
+  const file = dropdown.value;
+  if (file) localStorage.setItem('inputList_' + file, inputLinks.value);
   processLinks();
 });
 
-/* === Fungsi pemrosesan utama === */
+function restoreData() {
+  const file = dropdown.value;
+  const savedInput = localStorage.getItem('inputList_' + file);
+  const savedPage = parseInt(localStorage.getItem('currentPage_' + file) || '1');
+  inputLinks.value = savedInput || '';
+  processLinks();
+  if (savedPage > 0) {
+    currentPage = savedPage;
+    showPage(currentPage);
+  }
+}
+
 function processLinks() {
-  const lines = inputLinksEl.value.split('\n').map(x=>x.trim()).filter(Boolean);
-  const unique = [...new Set(lines)];
-  const dup = lines.length - unique.length;
+  const raw = inputLinks.value.split('\n').map(l => l.trim()).filter(Boolean);
+  const unique = [...new Set(raw)];
+  const duplicateCount = raw.length - unique.length;
+
   allPages = [];
-  for (let i=0; i<unique.length; i+=MAX_PER_PAGE)
-    allPages.push(unique.slice(i, i+MAX_PER_PAGE));
+  for (let i = 0; i < unique.length; i += MAX_PER_PAGE) {
+    allPages.push(unique.slice(i, i + MAX_PER_PAGE));
+  }
 
-  renderStats(lines.length, unique.length, dup);
+  if (currentPage > allPages.length) currentPage = 1;
+  showPage(currentPage);
+  stats.innerHTML = `
+    Total baris: ${raw.length}<br>
+    Unik: ${unique.length}<br>
+    Duplikat: ${duplicateCount}<br>
+    Total halaman: ${allPages.length}
+  `;
   renderPagination();
-  const savedPage = parseInt(localStorage.getItem('currentPage_' + currentFile) || '1');
-  showPage(savedPage);
 }
 
-/* === Render info === */
-function renderStats(total, uniq, dup) {
-  statsEl.textContent = `Total: ${total} | Unik: ${uniq} | Duplikat: ${dup} | Halaman: ${allPages.length}`;
-}
-
-/* === Tampilkan halaman tertentu === */
 function showPage(page) {
-  if (!allPages.length) { outputEl.innerHTML = ''; paginationEl.innerHTML = ''; return; }
-  if (page < 1) page = 1;
-  if (page > allPages.length) page = allPages.length;
+  const file = dropdown.value;
+  if (file) localStorage.setItem('currentPage_' + file, page);
   currentPage = page;
-  if (currentFile)
-    localStorage.setItem('currentPage_' + currentFile, page);
-  outputEl.innerHTML = allPages[page - 1].map(l => `<a href="${l}" target="_blank">${l}</a>`).join('');
-  highlightActivePage();
+  const items = allPages[page - 1] || [];
+  output.innerHTML = items.map(l => `<div class="link-item"><a href="${l}" target="_blank">${l}</a></div>`).join('');
 }
 
-/* === Render pagination === */
 function renderPagination() {
-  paginationEl.innerHTML = '';
+  pagination.innerHTML = '';
   for (let i = 1; i <= allPages.length; i++) {
     const btn = document.createElement('button');
     btn.textContent = i;
-    btn.className = 'page-btn';
-    if (i === currentPage) btn.classList.add('active');
-    btn.onclick = () => showPage(i);
-    paginationEl.appendChild(btn);
+    if (i === currentPage) btn.style.fontWeight = 'bold';
+    btn.addEventListener('click', () => showPage(i));
+    pagination.appendChild(btn);
   }
 }
-
-/* === Highlight aktif === */
-function highlightActivePage() {
-  document.querySelectorAll('.page-btn').forEach(btn => {
-    btn.classList.toggle('active', parseInt(btn.textContent) === currentPage);
-  });
-}
-
-/* === Simpan dan restore data berdasarkan file === */
-function saveDataForFile(file) {
-  if (!file) return;
-  localStorage.setItem('inputList_' + file, inputLinksEl.value);
-  localStorage.setItem('currentPage_' + file, currentPage);
-}
-
-function restoreDataForFile(file) {
-  if (!file) return;
-  const inputData = localStorage.getItem('inputList_' + file) || '';
-  const savedPage = parseInt(localStorage.getItem('currentPage_' + file) || '1');
-  inputLinksEl.value = inputData;
-  currentPage = savedPage;
-  processLinks();
-  showPage(currentPage);
-}
 </script>
+
 </body>
 </html>
