--- a/oktober1/gabung.html
+++ b/oktober1/gabung.html
@@ -57,11 +57,11 @@
 <h3>Daftar File TXT Produk</h3>
 <select id="fileDropdown">
   <option value="">-- Pilih File TXT --</option>
-  <option value="jalb.txt">jalb.txt</option>
-  <option value="rano.txt">rano.txt</option>
-  <option value="indah.txt">indah.txt</option>
-  <option value="rini.txt">rini.txt</option>
-  <option value="nurbad.txt">nurbad.txt</option>
+  <option value="satu.txt">jalb.txt</option>
+  <option value="dua.txt">rano.txt</option>
+  <option value="tiga.txt">indah.txt</option>
+  <option value="empat.txt">rini.txt</option>
+  <option value="lima.txt">nurbad.txt</option>
 </select>
 <div class="input-buttons">
   <button id="ambilFileListLinksBtn">Ambil ke Input Links</button>
