--- a/oktober1/gabung.html
+++ b/oktober1/gabung.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Produk Laku di Live MadGazan</title>
+<title>Produk 21 dst Live MadGazan</title>
 <style>
   body { font-family: Arial, sans-serif; margin: 15px; max-width: 900px; margin-inline:auto; background-color:#fffef9; }
   h1,h2,h3 { color:#b36b00; text-align:center; }
@@ -43,7 +43,7 @@
 </head>
 <body>
 
-<h1>Produk Laku di Live MadGazan</h1>
+<h1>Produk Live MadGazan</h1>
 <h2>Manajemen Shopee Live</h2>
 
 <textarea id="inputLinks" placeholder="Masukkan ribuan link produk Shopee, satu per baris..."></textarea>
