--- a/oktober1/gabung.html
+++ b/oktober1/gabung.html
@@ -26,6 +26,7 @@
   #stats { margin:15px 0; font-weight:bold; font-size:1rem; white-space:pre-line; }
   .sponsor { background-color:#fffae6; border:1px solid #ffd42a; padding:12px; margin:15px 0; font-weight:bold; text-align:center; color:#b36b00; border-radius:6px; box-shadow:0 0 5px rgba(255,212,42,0.5); font-size:1rem; }
   footer { text-align:center; margin-top:25px; font-size:0.9rem; color:#888; }
+  .backup-area { margin-top:25px; padding:12px; background:#fffbe6; border-radius:8px; border:1px solid #ffd42a; text-align:center; }
   @media (max-width:720px){
     body { padding:12px; }
     textarea{ height:120px; }
@@ -79,6 +80,17 @@
 <button id="copyBtn" onclick="copyToClipboard()">Copy Link di Halaman Ini</button>
 
 <div class="pagination" id="pagination"></div>
+
+<!-- 🧩 Fitur Backup & Import -->
+<div class="backup-area">
+  <h3>🔒 Backup & Import Data</h3>
+  <div class="input-buttons">
+    <button onclick="exportLocalStorage()">Backup Data ke File</button>
+    <input type="file" id="importFile" accept=".json">
+    <button onclick="importLocalStorage()">Import Data</button>
+  </div>
+  <button style="margin-top:10px; background:#ffd0d0; border-color:#cc0000;" onclick="resetLocalStorage()">❌ Hapus Semua Data LocalStorage</button>
+</div>
 
 <footer>
   © 2025 Kios Tembakau MadGazan — Semua Hak Dilindungi
@@ -229,6 +241,51 @@ function copyToClipboard() {
   if (!allPages.length) return alert('Tidak ada link!');
   const text = allPages[currentPage - 1].join('\n');
   navigator.clipboard.writeText(text).then(() => alert('Disalin!'));
+}
+
+/* === 🧩 FITUR BACKUP / IMPORT LOCALSTORAGE === */
+function exportLocalStorage() {
+  const data = {};
+  for (let i = 0; i < localStorage.length; i++) {
+    const key = localStorage.key(i);
+    data[key] = localStorage.getItem(key);
+  }
+  const blob = new Blob([JSON.stringify(data, null, 2)], { type: 'application/json' });
+  const url = URL.createObjectURL(blob);
+  const a = document.createElement('a');
+  a.href = url;
+  a.download = 'madgazan_backup.json';
+  a.click();
+  URL.revokeObjectURL(url);
+  alert('✅ Data berhasil disimpan ke file madgazan_backup.json');
+}
+
+function importLocalStorage() {
+  const fileInput = document.getElementById('importFile');
+  const file = fileInput.files[0];
+  if (!file) return alert('Pilih file JSON dulu.');
+  const reader = new FileReader();
+  reader.onload = function(e) {
+    try {
+      const data = JSON.parse(e.target.result);
+      Object.keys(data).forEach(key => {
+        localStorage.setItem(key, data[key]);
+      });
+      alert('✅ Data berhasil diimport ke localStorage. Silakan reload halaman.');
+      location.reload();
+    } catch (err) {
+      alert('❌ File tidak valid atau rusak: ' + err.message);
+    }
+  };
+  reader.readAsText(file);
+}
+
+function resetLocalStorage() {
+  if (confirm('Yakin ingin menghapus semua data localStorage?')) {
+    localStorage.clear();
+    alert('Semua data localStorage telah dihapus.');
+    location.reload();
+  }
 }
 </script>
 </body>
