--- a/oktober1/gabung.html
+++ b/oktober1/gabung.html
@@ -65,7 +65,7 @@
   <option value="lima.txt">nurbad.txt</option>
 </select>
 <div class="input-buttons">
-  <button id="ambilFileListLinksBtn">Ambil ke Input Links</button>
+  <button id="ambilFileListLinksBtn">Download Terbaru</button>
 </div>
 
 <div class="sponsor">
